package no.kristiania.pgr200.cli;



public class InteractiveHelp extends CommandHandler {

    public InteractiveHelp() { }

    @Override
    public String readHelpCommands(String table, String mode) {
        return super.readHelpCommands(table, mode);
    }
}
